Add additional styling and structure

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Lato', sans-serif !important;
+}
+
 .nav-bar-custom {
   background-color: #046380;
   color: white;
@@ -18,6 +22,8 @@
 
 .jumbo-top h1 {
   padding-bottom: 15px;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
 }
 
 input.form-control {
@@ -30,7 +36,7 @@ input.form-control {
 }
 
 .upvote-downvote-wrapper {
-  width: 45px !important;
+  width: 55px !important;
   text-align: center;
 }
 
@@ -40,6 +46,8 @@ i.fa-sort-asc, i.fa-sort-desc {
 
 .idea-title {
   margin-top: 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
 }
 
 .idea-post:hover {
@@ -59,4 +67,13 @@ i.fa-comments {
   margin-top: 10px;
   width: 50px;
   text-align: center;
+  float: right;
+}
+
+.karma-points {
+  padding: 5px 0;
+}
+
+.timestamp-author {
+  margin-bottom: 0;
 }
