--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,3 +1,8 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
+.ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body {
   font-family: 'Lato', sans-serif !important;
 }
