--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -20,6 +20,15 @@ body {
   color: black;
 }
 
+.navbar-nav {
+  float: none;
+  display: inline-block;
+}
+
+.nav-logo {
+  padding-top: 2px;
+}
+
 .jumbo-top {
 	text-align: center;
   margin-bottom: 0 !important;
@@ -123,4 +132,52 @@ i.fa-comments:active {
 
 .show-on-error {
   height: 0;
+}
+
+.login-form {
+  text-align: center;
+}
+
+input.login-form-input {
+  width: 75% !important;
+  height: 45px !important;
+  margin: 0 auto;
+}
+
+input#inputEmail {
+  border-radius: 3px 3px 0 0;
+}
+
+input#inputPassword {
+  border-radius: 0 0 3px 3px;
+}
+
+.login-button {
+  font-family: 'Lato', sans-serif !important;
+  margin: 0 auto;
+  width: 75% !important;
+  background-color: #046380 !important;
+}
+
+.login-button:hover {
+  background-color: #046075 !important;
+}
+
+.login-button:active {
+  background-color: #03495e !important;
+}
+
+.login-button {
+  margin-top: 20px;
+  border-radius: 3px !important;
+}
+
+img.logo-large {
+  width: 60%;
+  margin-top: 25%;
+  margin-bottom: 5%;
+}
+
+.sign-up-here {
+  margin-top: 10px;
 }
