--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -30,6 +30,7 @@ body {
 }
 
 .jumbo-top {
+  padding: 20px 0 !important;
 	text-align: center;
   margin-bottom: 0 !important;
   background-image: url('../assets/blackboard-background.png');
@@ -42,7 +43,15 @@ body {
 }
 
 input.form-control {
-  width: 600px !important;
+  width: 650px !important;
+}
+
+textarea.form-description-control {
+  width: 650px !important;
+}
+
+button.idea-submit-button {
+  margin-top: 5px;
 }
 
 .row {
@@ -153,6 +162,10 @@ input#inputPassword {
   border-radius: 0 0 3px 3px;
 }
 
+input.form-description-control {
+  margin-top: 5px;
+}
+
 .login-button {
   font-family: 'Lato', sans-serif !important;
   margin: 0 auto;
@@ -194,4 +207,29 @@ a.glint-logo-icon {
 
 a.glint-logo-icon:hover{
   background-color: rgba(0,0,0,0) !important;
+}
+
+.animate-enter, .animate-leave { 
+  -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  position: relative;
+  display: block;
+  overflow: hidden;
+  text-overflow: clip;
+  white-space:nowrap;
+} 
+ 
+.animate-leave.animate-leave-active, .animate-enter {
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+}
+ 
+.animate-enter.animate-enter-active, .animate-leave {
+  opacity: 1;
+  width: 150px;
+  height: 30px;
 }
